# dEngine

./: .gitignore  README.md  pyproject.toml
configs/: builtins.py.mako
configs/core/: core.yml
configs/core/datasets/: cifar10.yml  cifar100.yml  cifar10_fast.yml  mnist.yml  mnist_reduced.yml
configs/core/graph/: star.yml  (+7 more)
configs/schemas/: README.md  experiment.json  experiment_with_corruption.json
dengine/: __init__.py  interfaces.py
dengine/analysis/: __init__.py  color_dict.py  confusion_matrix.py  experiment.py  metrics.py  partitioning.py
dengine/callbacks/: __init__.py  callback.py  decorators.py  local.py
dengine/config/: __init__.py  builtins.py  configuration.py  constants.py  utils.py
dengine/dataset/: __init__.py  cifar.py  dataset.py  decorators.py  emnist.py  mnist.py  utils.py
dengine/graph/: __init__.py  decorators.py  graph.py  nx_graph.py  sai_graph_generator.py  utils.py
dengine/models/: __init__.py  classifier.py  decorators.py  memnet.py  models.py  modules.py  resnet.py  utils.py
dengine/partitioning/: __init__.py  decorators.py  iid.py  noniid.py  partitioning.py  utils.py
dengine/scenarios/: __init__.py  centralized.py  decdiff.py  decentralized.py  decorators.py  federated.py  placeholder.py  scenario.py  utils.py
dengine/training_strategies/: __init__.py  decorators.py  local_update_strategy.py
dengine/utils/: confusion_matrix.py  utils.py
examples/GAN/: README.md  __init__.py  benchmark.bash  callbacks.py  scenario.py
examples/HelloWorld/: .gitignore  config.yml  main.py
examples/Scaffold/: main.py  scaffold.py
(+23 files in other folders)
